[package]
name = "pyth-min"
version = "0.1.1"
description = "Minimal sdk for interacting with Pyth pull oracles on Solana"
readme = "README.MD"
authors = ["Mithriac Labs <contact@psyoptions.io>"]
repository = "https://github.com/mithraiclabs/pyth-min"
license = "Apache-2.0"
edition = "2021"
keywords = ["solana", "anchor", "pyth"]

[lib]
crate-type = ["lib"]
name = "pyth_min"

[dependencies]